@@ -341,10 +341,7 @@ sub run_lock {
     $file->spew("$$\n");
 
     # Create guard object that releases the pidfile once out of scope
-    return guard {
-      $file->append({truncate => 1})
-        if $self->is_running;
-    };
+    return guard { $file->remove if $self->is_running };
   }
 
   return;
